testsuite/bsc.typechecker/constructors/UnionOneArgGivenNone.bsv
typedef union tagged { Bool Foo; } Bar;

Bar x = Foo;

